<resources>
    <string name="app_name">面试宝典</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--用户注册-登录-找回密码-->
    <string name="user_login">点击登录</string>
    <string name="user_login_new">注册账号</string>
    <string name="user_login_context">请登录后再操作</string>
    <!--用户登录-->
    <string name="user_login_text">请登录</string>
    <string name="user_login_phone">手机号</string>
    <string name="user_password">密  码</string>
    <string name="user_new_login">注册新用户</string>
    <string name="user_login_new_text">注册</string>
    <!--用户注册-->
    <string name="user_retrieve_num">找回密码</string>
    <string name="user_get_verify_num">获取验证码</string>

    <string name="user_phone">手机号</string>
    <string name="user_new_password">新密码</string>
    <string name="user_verify_num">验证码</string>
    <string name="user_nick_name">昵  称</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>