<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingRight="40dp"
    android:paddingLeft="40dp"
    android:gravity="center_horizontal"
    tools:context=".user.LoginActivity">
    <TextView
        android:id="@+id/top_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="23sp"
        android:text="@string/user_login_text"/>
    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/icon"/>
    <EditText
        android:id="@+id/et_user_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/user_login_phone"
        android:textColor="@drawable/button_text_color_style2"
        android:background="@drawable/button_radius_blue2"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/et_user_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/user_password"
        android:layout_marginTop="20dp"
        android:lines="1"
        android:textColor="@drawable/button_text_color_style2"
        android:background="@drawable/button_radius_blue2"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/user_login"
        android:layout_marginTop="20dp"
        android:textColor="@drawable/button_text_color_style"
        android:background="@drawable/button_radius_blue"
        android:textSize="18sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_login_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_new_login"
            android:textSize="14sp"
            android:textColor="@color/top_bg_blue1"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/tv_retrieve_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_retrieve_num"
            android:textSize="14sp"
            android:textColor="@color/top_bg_blue1"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>