<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".user.LoginActivity">
    <include layout="@layout/layout_back_top_white"/>

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/icon"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/et_user_phone"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="@string/user_login_phone"
                android:lines="1"
                android:background="@null"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tv_get_verify_num"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textColor="@color/top_bg_blue1"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/et_user_phone"
                android:text="@string/user_get_verify_num"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/top_bg_gray"/>
        <EditText
            android:id="@+id/et_user_verify_num"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/user_verify_num"
            android:inputType="number"
            android:maxLength="6"
            android:lines="1"
            android:background="@null"
            android:textSize="18sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/top_bg_gray"/>
        <EditText
            android:id="@+id/et_user_nick_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/user_nick_name"
            android:lines="1"
            android:background="@null"
            android:textSize="18sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/top_bg_gray"/>
        <EditText
            android:id="@+id/et_user_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/user_password"
            android:lines="1"
            android:background="@null"
            android:textSize="18sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/top_bg_gray"/>
        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <RadioButton
                android:id="@+id/radio_boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="男" />
            <RadioButton
                android:id="@+id/radio_girl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="女" />
        </RadioGroup>
        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/user_login"
            android:layout_marginTop="20dp"
            android:textColor="@drawable/button_text_color_style"
            android:background="@drawable/button_radius_blue"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>